gl33-master/src/test/deca/context/invalid/other/instanceSansNew1.deca
// Test invalid : utiliser une instance sans le mot clé new

class MyClass{
   protected int a;
}

{
    MyClass m;
    m.a = 1;
}
